# PWR

./: .gitignore  CMakeLists.txt  README debug MPI.md  README.md  main.c
py/: rot_schwarz.ipynb  solvelgs.py
src/: PWR25_Uebung09_Template.c  PWR25_Uebung09_Template.h  cmn.c  cmn.h  gauss_elimination.c  gauss_elimination.h  test.c
